# modulator_2023

./: .gitignore  requirements.txt  setup.cfg
mzm_model/core/: elements_ssfm_clean.py  emulation_settings.py  math_utils.py  modulator_ssfm_params.py  post_soa_config.py  pre_soa_config.py  science_utils.py  science_utils_ssfm.py  soa_config.py  soa_config_singlechannel.py  utils.py  utils_ssfm.py
mzm_model/engine/: import_wdm.py  import_wdm_2023.py  iq_mzm.py
mzm_model/resources/: xi.csv
mzm_model/results/: .~lock.out_tx_time.csv#  json_params.json  out_tx_time.csv  out_tx_time_xi.csv  out_tx_time_xq.csv  out_tx_time_yi.csv  out_tx_time_yq.csv  test.txt
tasks/: dc_mzm_models.py  phase_vsub_analysis.py
