[metadata]
name = mzm-model_modulator23
version = 1.0.1
author = Rocco D'Ingillo
author_email = s245301@studenti.polito.it
description = A package for IQ MZM functions
long_description = file: README.md
long_description_content_type = text/markdown
url = [metadata]name = package_template_YOUR-USERNAME-HERE

project_urls =
Bug Tracker = https://optcomgit.polito.it/d060491/optical-wideband-iq-modulator
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent[options]
package_dir = mzm_model

packages = find:
python_requires = >=3.6
install_requires =
   numpy
